Fixing icons being misaligned if the content is too big.

--- a/generator/css/cards.css
+++ b/generator/css/cards.css
@@ -7,6 +7,7 @@
     font-family: 'Noto Sans', 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
     font-size: 8pt;
     overflow: hidden;
+    margin-bottom: 1mm;
 }
 
 .card.rounded-corners {
@@ -24,6 +25,8 @@
     flex-direction: column;
     flex: 1;
     font-size: inherit;
+    /* 11mm is title height plus padding */
+    max-height: calc(100% - 11mm);
 }
 
 .card-back {
